--- a/html5up-miniport/index.html
+++ b/html5up-miniport/index.html
@@ -101,7 +101,7 @@
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
 								<a href="#" class="image featured"><img src="images/todo.jpg" alt="" /></a>
-								<h3><a href="https://todolist-topherj.herokuapp.com/">The Dire To-Do</a></h3>
+								<h3><a href="https://todolist-topherj.herokuapp.com/">Topher's To-Do's</a></h3>
 								<p>My first full-stack project! A full-stack to-do list (feel free to add a task for me to complete).</p>
 							</article>
 						</div>
@@ -109,7 +109,7 @@
 							<article class="box style2">
 								<a href="https://popupapi.herokuapp.com/" class="image featured"><img src="images/map.jpg" alt="" /></a>
 								<h3><a href="#">Popupapi</a></h3>
-								<p>In-progress: a full stack popup-locator for the New Orleans area. Created with Mapbox and the Mapquest </p>
+								<p>In-progress: a full stack popup-locator for the New Orleans area. Created with Mapbox and the Mapquest. </p>
 							</article>
 					</div>
 				</div>
